--- a/java/test/com/natpryce/pearlfish/example/BasicArithmeticExample.addition.md.template
+++ b/java/test/com/natpryce/pearlfish/example/BasicArithmeticExample.addition.md.template
@@ -7,6 +7,6 @@ Basic addition with 32-bit integers.
 | Scenario   | X            | Y            | X + Y      |
 +============+==============+==============+============+
 <results:{r|
-| <r.name>   | <r.input.0>  | <r.input.1>  | <r.output> |
+| <r.name>   | <r.input;separator=" | ">       | <r.output> |
 +------------+--------------+--------------+------------+
 }>
