--- a/java/test/com/natpryce/pearlfish/example/BasicArithmeticExample.addition.md.template
+++ b/java/test/com/natpryce/pearlfish/example/BasicArithmeticExample.addition.md.template
@@ -1,10 +1,28 @@
 Addition
 ========
 
-Basic addition with 32-bit integers.
+The calculator performs basic addition.
 
 | Scenario   | X            | Y            | X + Y      |
 |------------|-------------:|-------------:|-----------:|
-{{#results}}
+{{#basic}}
 | {{name}}   | {{input.x}}  | {{input.y}}  | {{output}} |
-{{/results}}
+{{/basic}}
+
+
+Addition supports negative numbers.
+
+| Scenario   | X            | Y            | X + Y      |
+|------------|-------------:|-------------:|-----------:|
+{{#negative}}
+| {{name}}   | {{input.x}}  | {{input.y}}  | {{output}} |
+{{/negative}}
+
+
+Addition can result in integers larger than 32-bits in size.
+
+| Scenario   | X            | Y            | X + Y      |
+|------------|-------------:|-------------:|-----------:|
+{{#large}}
+| {{name}}   | {{input.x}}  | {{input.y}}  | {{output}} |
+{{/large}}
