--- a/build.xml
+++ b/build.xml
@@ -8,13 +8,21 @@
 
     <target name="package" depends="package.library, package.source, package.dependencies, package.library.standalone"/>
 
-    <target name="package.library.standalone" depends="package.library">
-        <jar destfile="out/pearlfish-${version}-standalone.jar">
-          <zipfileset src="${basedir}/libs/jmustache/jmustache-natpryce-1.9-SNAPSHOT.jar"/>
-          <zipfileset src="${basedir}/libs/guava/guava-14.0.1.jar"/>
-          <zipfileset src="${basedir}/libs/snakeyaml/snakeyaml-1.11.jar"/>
-          <zipfileset src="out/pearlfish-${version}.jar"/>
-        </jar>
+    <target name="taskdef.jarjar">
+        <taskdef name="jarjar" classname="com.tonicsystems.jarjar.JarJarTask"
+                 classpath="libs/jarjar/jarjar-1.4.jar"/>
+    </target>
+
+    <target name="package.library.standalone" depends="package.library, taskdef.jarjar">
+        <jarjar jarfile="out/pearlfish-${version}-standalone.jar">
+            <zipfileset src="${basedir}/libs/jmustache/jmustache-natpryce-1.9-SNAPSHOT.jar" excludes="META-INF/**"/>
+            <zipfileset src="${basedir}/libs/guava/guava-14.0.1.jar" excludes="META-INF/**"/>
+            <zipfileset src="${basedir}/libs/snakeyaml/snakeyaml-1.11.jar" excludes="META-INF/**"/>
+            <zipfileset src="out/pearlfish-${version}.jar"/>
+
+            <rule pattern="com.google.common.**" result="com.natpryce.pearlfish.internal.google.common.@1"/>
+            <rule pattern="org.yaml.snakeyaml.**" result="com.natpryce.pearlfish.internal.snakeyaml.@1"/>
+        </jarjar>
     </target>
 
     <target name="package.dependencies">
@@ -23,22 +31,20 @@
                 <include name="jmustache/*.jar"/>
                 <include name="guava/*.jar"/>
                 <include name="snakeyaml/*.jar"/>
-                <exclude name="**/*-source.jar"/>
                 <exclude name="**/*-sources.jar"/>
-                <exclude name="**/*-src.jar"/>
             </fileset>
         </copy>
     </target>
 
     <target name="package.library" depends="test">
         <jar destfile="out/pearlfish-${version}.jar">
-          <zipfileset dir="${pearlfish.output.dir}" excludes="**/unstable/**"/>
-          <zipfileset dir="${basedir}/src/" includes="META-INF/**"/>
+            <zipfileset dir="${pearlfish.output.dir}" excludes="**/unstable/**"/>
+            <zipfileset dir="${basedir}/src/" includes="META-INF/**"/>
         </jar>
     </target>
 
     <target name="package.source" depends="test">
-        <jar destfile="out/pearlfish-${version}-source.jar">
+        <jar destfile="out/pearlfish-${version}-sources.jar">
             <zipfileset dir="src" excludes="**/unstable/**"/>
         </jar>
     </target>
