NamedFileNamingConvention is more sensible in its handling of file extensions.  If the explicitly named file contains a file extension, the extension defined by the file format is ignored.  If only the approved file name is given, the "-received" suffix for the received file name is inserted before the extension if there is one.

--- a/test/info/pearlfish/naming/NamingConventionsTest.testNamingConventions-approved.yaml
+++ b/test/info/pearlfish/naming/NamingConventionsTest.testNamingConventions-approved.yaml
@@ -1,4 +1,7 @@
-fixedName: {approvedFileName: docs/example.txt, receivedFileName: docs/example-received.txt}
+fixedNameRoot: {approvedFileName: docs/example.txt, receivedFileName: docs/example-received.txt}
+fixedNameRoots: {approvedFileName: docs/approved-example.txt, receivedFileName: docs/generated-example.txt}
+fixedNameWithExtension: {approvedFileName: docs/example.foo, receivedFileName: docs/example-received.foo}
+fixedNamesWithExtension: {approvedFileName: docs/approved-example.foo, receivedFileName: docs/generated-example.foo}
 nextToSource: {approvedFileName: example/info/pearlfish/naming/NamingConventionsTest.exampleTest-approved.txt,
   receivedFileName: example/info/pearlfish/naming/NamingConventionsTest.exampleTest-received.txt}
 singleDir: {approvedFileName: example/info.pearlfish.naming.NamingConventionsTest.exampleTest-approved.txt,
